correct some spacing and bugs

--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ body{
 a{
   color: black;
 }
+.lead{
+  color: #000 ;
+}
 h2{
   text-align: center;
   padding: 0.75rem;
